--- a/kernel/pmac32_defconfig
+++ b/kernel/pmac32_defconfig
@@ -2601,7 +2601,7 @@ CONFIG_MWIFIEX_PCIE=m
 # CONFIG_MWIFIEX_USB is not set
 CONFIG_MWL8K=m
 CONFIG_WLAN_VENDOR_MEDIATEK=y
-# CONFIG_MT7601U is not set
+CONFIG_MT7601U=m
 # CONFIG_MT76x0U is not set
 # CONFIG_MT76x2E is not set
 # CONFIG_MT76x2U is not set
