enabled ATI rage support

--- a/kernel/pmac32_defconfig
+++ b/kernel/pmac32_defconfig
@@ -3516,7 +3516,13 @@ CONFIG_DRM_I2C_ADV7511_CEC=y
 CONFIG_DRM_ARCPGU=m
 # CONFIG_DRM_HISI_HIBMC is not set
 CONFIG_DRM_TINYDRM=m
-# CONFIG_DRM_LEGACY is not set
+CONFIG_DRM_LEGACY=y
+# CONFIG_DRM_TDFX is not set
+CONFIG_DRM_R128=m
+# CONFIG_DRM_MGA is not set
+# CONFIG_DRM_SIS is not set
+# CONFIG_DRM_VIA is not set
+# CONFIG_DRM_SAVAGE is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=m
 
 #
