disabled open firmare fb

--- a/kernel/pmac32_defconfig
+++ b/kernel/pmac32_defconfig
@@ -3557,7 +3557,7 @@ CONFIG_FB_TILEBLITTING=y
 CONFIG_FB_CIRRUS=m
 # CONFIG_FB_PM2 is not set
 # CONFIG_FB_CYBER2000 is not set
-CONFIG_FB_OF=y
+# CONFIG_FB_OF is not set
 CONFIG_FB_CONTROL=y
 CONFIG_FB_PLATINUM=y
 CONFIG_FB_VALKYRIE=y
