--- a/ports/core-ppc/prt-get/prt-get.conf
+++ b/ports/core-ppc/prt-get/prt-get.conf
@@ -6,6 +6,7 @@
 prtdir /usr/ports/core-ppc
 prtdir /usr/ports/opt-ppc
 prtdir /usr/ports/xorg-ppc
+#prtdir /usr/ports/contrib-ppc
 prtdir /usr/ports/core
 prtdir /usr/ports/opt
 prtdir /usr/ports/xorg
